syntax = "proto3";

package user;

// === Enums ===

enum Role {
    ROLE_UNSPECIFIED = 0; // Default value, should not be used explicitly
    ROLE_PLATFORM_ADMIN = 1;
    ROLE_TENANT_ADMIN = 2;
    ROLE_PILOT = 3;
}

// === Commands ===

message RegisterUser {
    string user_id = 1;         // Typically a UUID generated by the caller/API layer
    string username = 2;
    string email = 3;
    string password_hash = 4;   // Hash generated by the API layer before sending command
    Role initial_role = 5;      // Role assigned on registration
    optional string tenant_id = 6; // Required if role is not PlatformAdmin
}

message ChangePassword {
    string user_id = 1;
    string new_password_hash = 2; // Hash generated by the API layer
}

message GenerateApiKey {
    string user_id = 1;
    string key_id = 2;      // Generated by the handler
    string key_name = 3;    // Optional name for the key (e.g., "My Laptop")
    string api_key_hash = 4; // Generated by the handler
}

message LoginUser {
    string username = 1;
    string password_attempt = 2; // Plain text password attempt from user input
}

message RevokeApiKey {
    string user_id = 1;
    string key_id = 2; // The ID of the key to revoke
}

message UserCommand {
    oneof user_command {
        RegisterUser register = 1;
        ChangePassword change_password = 2;
        GenerateApiKey generate_api_key = 3;
        LoginUser login = 4;
        RevokeApiKey revoke_api_key = 5;
        // Add other commands as needed
    }
}

// === Events ===

message UserRegistered {
    string user_id = 1;
    string username = 2;
    string email = 3;
    Role role = 4;
    optional string tenant_id = 5;
    string password_hash = 6; // Include password hash for read model projection
    string timestamp = 7; // ISO 8601 timestamp
}

message PasswordChanged {
    string user_id = 1;
    string timestamp = 2; // ISO 8601 timestamp
}

message ApiKeyGenerated {
    string user_id = 1;
    string key_id = 2;      // Identifier for the key itself
    string key_name = 3;
    string api_key_hash = 4; // Hash of the generated API key (store hash, return plain key once)
    string timestamp = 5;   // ISO 8601 timestamp
}

message UserLoggedIn {
    string user_id = 1;
    string timestamp = 2; // ISO 8601 timestamp
    // Could include session info if needed later
}

message ApiKeyRevoked {
    string user_id = 1;
    string key_id = 2;      // ID of the revoked key
    string timestamp = 3;   // ISO 8601 timestamp
}
